# windows-snake

./: .clangd  .gitignore  CMakeLists.txt  GlGraphicsShader.cpp  GlVertexArray.cpp  GlVertexArray.h  GlVertexBuffer.cpp  GlVertexBuffer.h  GlfwWindow.cpp  GlfwWindow.h  GlslGraphicsShader.cpp  GlslGraphicsShader.h  GraphicsShader.h  RenderTarget.h  SdlWindow.cpp  SdlWindow.h  VertexArray.h  VertexBuffer.h  Window.h  flake.nix  main.cpp
resources/: fragmentShader.glsl  vertexShader.glsl
src/: CameraPerspective.cpp  CameraPerspective.h  GlGraphicsShader.cpp  GlGraphicsShader.h  GlVertexArray.cpp  GlVertexBuffer.cpp  GlVertexBuffer.h  GlfwWindow.cpp  GlfwWindow.h  GraphicsShader.h  Keyboard.h  RenderTarget.h  SdlEventQueue.cpp  SdlEventQueue.h  SdlWindow.cpp  SdlWindow.h  VertexArray.h  VertexBuffer.h  Window.h  main.cpp
src/Audio/: AudioBuffer.h  AudioOutput.cpp  AudioOutput.h  AudioSource.cpp  AudioSource.h  AudioSourceSine.cpp  ChannelLayout.cpp  ChannelLayout.h  SampleConversions.cpp  SampleConversions.h
